# did-ln

./: .gitignore  :w  LICENSE  Makefile.in  README.md  configure.ac  simple-did.md
docs/: did-ln.tex  runcrypto.cls  simple-did.md  tutorial.aux  tutorial.tex
examples/: simple-did.json
src/: Makefile.am  Makefile.in  did.cpp  did.h  identity.py  main.cpp  verify.py
test/: secret.base58  secret.key
